<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="Auth0 Sample"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/titleTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="36sp" android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
    <Button
            android:text="@string/login_using_web"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/webLoginButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/nativeLoginButton"
            android:background="@color/colorAccent" android:textColor="@android:color/background_light"
            android:textStyle="bold"/>
    <Button
            android:text="@string/login_native"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nativeLoginButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:layout_marginBottom="100dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorAccent"
            android:textColor="@android:color/background_light" android:textStyle="bold"
            android:visibility="gone"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/authentication_status_title_text_view" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:text="@string/current_authentication_status_title" android:textSize="20sp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/current_auth_status_text_view" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/authentication_status_title_text_view"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textSize="18sp"
            android:textStyle="bold" android:text="@string/not_logged_in" android:textAlignment="center"/>
    <TextView
            android:text="@string/token_info_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/token_info_text_view"
            app:layout_constraintTop_toBottomOf="@+id/current_auth_status_text_view" android:layout_marginTop="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp" android:textSize="20sp"/>
    <TextView
            android:text="@string/not_available"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/token_text_view" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/token_info_text_view" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:textAlignment="center" android:textSize="18sp"
            android:textStyle="bold"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" tools:visibility="gone"/>
</android.support.constraint.ConstraintLayout>
